fix: workflow trigger tags

--- a/.github/workflows/build-and-package.yml
+++ b/.github/workflows/build-and-package.yml
@@ -3,7 +3,7 @@ name: Build MCP Server
 on:
   push:
     tags:
-      - 'v*.*.*'
+      - 'foundry-mcp-server-v*.*.*'
 
 permissions:
   contents: write
