--- a/.github/workflows/build-foundry-module.yml
+++ b/.github/workflows/build-foundry-module.yml
@@ -3,7 +3,7 @@ name: Build FoundryVTT Module
 on:
   push:
     tags:
-      - 'v*.*.*'
+      - 'foundry-mcp-server-v*.*.*'
 
 permissions:
   contents: write
