feat!: extract foundry-local-rest-api module to standalone repository
BREAKING CHANGE: The foundry-local-rest-api module has been moved to its own repository
to improve focus and enable independent versioning.

Changes:
- Remove foundry-local-rest-api/ directory and all contents
- Remove build infrastructure (process-template.cjs, build-foundry-module.yml)
- Remove related E2E tests (rest-api-module.spec.ts, issue-7-json-parsing.spec.ts, module-settings.spec.ts)
- Update package.json to remove process-template and test:issue-7 scripts
- Update CHANGELOG.md to document this architectural change

The module is now available at: https://github.com/yourusername/foundryvtt-local-rest-api

--- a/package.json
+++ b/package.json
@@ -17,16 +17,17 @@
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:debug": "playwright test --debug",
     "test:e2e:report": "playwright show-report",
-    "test:issue-7": "playwright test tests/e2e/issue-7-json-parsing.spec.ts",
-    "test:issue-7:headed": "playwright test tests/e2e/issue-7-json-parsing.spec.ts --headed",
+    "test:integration": "vitest run --config vitest.integration.config.ts",
+    "test:integration:watch": "vitest --watch --config vitest.integration.config.ts",
+    "test:integration:ui": "vitest --ui --config vitest.integration.config.ts",
+    "test:integration:docker": "docker-compose -f docker-compose.test.yml up -d && npm run test:integration && docker-compose -f docker-compose.test.yml down",
     "test-connection": "tsx scripts/test-connection.ts",
     "setup-wizard": "tsx scripts/setup-wizard.ts",
     "lint": "eslint src --ext .ts",
     "clean": "rimraf dist",
     "docs": "typedoc src/index.ts --out docs --exclude '**/*.test.ts'",
     "docs:serve": "npm run docs && npx http-server docs",
-    "setup": "npm run clean && npm run build && npm run test-connection",
-    "process-template": "node scripts/process-template.cjs"
+    "setup": "npm run clean && npm run build && npm run test-connection"
   },
   "keywords": [
     "foundry",
