--- a/.gitignore
+++ b/.gitignore
@@ -87,6 +87,9 @@ temp/
 
 # Claude local settings (user-specific)
 .claude/settings.local.json
+
+# Blueprint work orders (task-specific, may contain sensitive details)
+docs/blueprint/work-orders/
 *.swp
 *.swo
 *~
